--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </section>
     <section class="container secundario">
       <img
-        src="/img/Plataformas.png"
+        src="img/Plataformas.png"
         alt="Um monitor e um celular com o Alura Plus aberto"
       />
       <div class="container__descricao">
@@ -60,14 +60,14 @@
         >
       </div>
       <img
-        src="/img/Telas.png"
+        src="img/Telas.png"
         alt="Tela da Alura Plus e do Alura Língua"
         class="secundario__imagem"
       />
     </section>
     <section class="container secundario">
       <img
-        src="/img/Notebook.png"
+        src="img/Notebook.png"
         alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
       />
       <div class="container__descricao">
@@ -84,15 +84,15 @@
       </h1>
       <ul class="dispositivos__lista">
         <li>
-          <img src="/img/tv.png" alt="ícone de televisão" />
+          <img src="img/tv.png" alt="ícone de televisão" />
           <h3 class="lista__item">TV</h3>
         </li>
         <li>
-          <img src="/img/computador.png" alt="ícone de computador" />
+          <img src="img/computador.png" alt="ícone de computador" />
           <h3 class="lista__item">Computador</h3>
         </li>
         <li>
-          <img src="/img/celular.png" alt="ícone de celular" />
+          <img src="img/celular.png" alt="ícone de celular" />
           <h3 class="lista__item">Celular</h3>
         </li>
       </ul>
